[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
description = Automatically classify Brain MRI series by pulse sequence types: FLAIR, T1C, T2, ADC, DWI, TOF and OTHER
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vantuan5644/MRI-Pulse-Sequence
project_urls =
    Bug Tracker = https://github.com/vantuan5644/MRI-Pulse-Sequence/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[bdist_wheel]
universal=1
